k8s/auth-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-service-policy
  namespace: secure-cloud
spec:
  podSelector:
    matchLabels: { app: auth-service }
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: resource-service } }
        - podSelector: { matchLabels: { app: ingress-nginx } }
      ports: [{ port: 4000, protocol: TCP }]
  egress:
    - to:
        - podSelector: { matchLabels: { app: auth-db } }
      ports: [{ port: 5432, protocol: TCP }]
    - to:
        - namespaceSelector: {}
      ports: [{ port: 443, protocol: TCP }]
